[gd_scene load_steps=3 format=3 uid="uid://btneatrxi6jv5"]

[ext_resource type="Script" path="res://LP4-2.gd" id="1_yypc0"]

[sub_resource type="Theme" id="Theme_enlox"]
default_font_size = 40

[node name="LP4-2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yypc0")

[node name="lblWeight" type="Label" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 28.0
offset_right = 713.0
offset_bottom = 78.0
theme = SubResource("Theme_enlox")
text = "Package weight in kilograms:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblLength" type="Label" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 84.0
offset_right = 730.0
offset_bottom = 142.0
theme = SubResource("Theme_enlox")
text = "Package length in centimeters:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblWidth" type="Label" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 143.0
offset_right = 722.0
offset_bottom = 201.0
theme = SubResource("Theme_enlox")
text = "Package width in centimeters:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblHeight" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 195.0
offset_right = 726.0
offset_bottom = 253.0
theme = SubResource("Theme_enlox")
text = "Package height in centimeters:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblOutkg" type="Label" parent="."]
layout_mode = 0
offset_top = 267.0
offset_right = 1125.0
offset_bottom = 325.0
theme = SubResource("Theme_enlox")
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblOutln" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 318.0
offset_right = 1127.0
offset_bottom = 376.0
theme = SubResource("Theme_enlox")
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblOutwi" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 372.0
offset_right = 1127.0
offset_bottom = 430.0
theme = SubResource("Theme_enlox")
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblOuthe" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 423.0
offset_right = 1131.0
offset_bottom = 481.0
theme = SubResource("Theme_enlox")
horizontal_alignment = 1
vertical_alignment = 1

[node name="lineWeight" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 652.0
offset_top = 30.0
offset_right = 1063.0
offset_bottom = 89.0

[node name="lineLength" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 684.0
offset_top = 89.0
offset_right = 1095.0
offset_bottom = 148.0

[node name="lineWidth" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 697.0
offset_top = 147.0
offset_right = 1108.0
offset_bottom = 206.0

[node name="lineHeight" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 708.0
offset_top = 209.0
offset_right = 1119.0
offset_bottom = 268.0

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 530.0
offset_right = 271.0
offset_bottom = 650.0
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 437.0
offset_top = 529.0
offset_right = 709.0
offset_bottom = 649.0
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 880.0
offset_top = 525.0
offset_right = 1152.0
offset_bottom = 645.0
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
