extends Control




func _on_btn_calc_pressed():
	var weight = int($lineWeight.text)
	var length = int($lineLength.text)
	var height = int($lineHeight.text)
	var width = int($lineWidth.text)
	
	if  weight >= 42:
		else if length >= 100000:
		else if width >= 100000:
		else if height >= 100000:
		else 
		p.innerHTML = "Package is okay.";
